--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://your-username.github.io/your-repo-name/",
+  "homepage": "https://sahilbhat079.github.io/my-portfolio/",
 "scripts": {
   "dev": "vite",
   "build": "vite build",
   "preview": "vite preview",
   "deploy": "gh-pages -d dist"
-},
+}
+,
   "dependencies": {
     "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
